fix: fixed the sidebar visibility issue

--- a/web/src/pages/Student/common.css
+++ b/web/src/pages/Student/common.css
@@ -1,4 +1,4 @@
-.custom_border{
+.border-custom{
     border-radius: 1rem;
     border-style: solid;
     border-width: 2px;
